pod/ingress-treafik/nginx/nginx-services.yml
# 内部网络转发
apiVersion: v1
kind: Service
metadata:
  name: nginx-serivce
  namespace: default
spec:
  selector: # 转发label为app=nginx
    app: nginx
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: nginx-serivce
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
